# aistempre

./: .env.example  .gitignore  COMPLETION_REPORT.md  Dockerfile.api  Dockerfile.frontend  EPIC1_COMPLETE.md  EPIC1_SUMMARY.md  EPIC2_COMPLETION_REPORT.md  EPIC2_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  README.old.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  verify-setup.sh
.devcontainer/: devcontainer.json
.github/workflows/: backend-ci.yml  ci.yml  copilot-setup-steps.yml  docker-build.yml  frontend-ci.yml
api/: Dockerfile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
api/app/: datasets.py  main.py  models.py  training_manager.py
api/app/routers/: datasets.py  runs.py
api/configs/: data.yaml  features.yaml  loss.yaml  model.yaml  train.yaml  tune.yaml
api/neurotrader_tests/: test_labels.py  test_losses.py
api/scripts/: generate_example_data.py  validate_structure.py
api/src/neurotrader/: __init__.py  cli.py
api/src/neurotrader/features/: __init__.py  calendar.py  crossasset.py  microstructure.py  price.py  registry.py  technical.py  volatility.py
api/src/neurotrader/labels/: __init__.py  targets.py  thresholds.py
api/src/neurotrader/losses/: __init__.py  calibration.py  conformal.py  factory.py
api/src/neurotrader/models/: __init__.py  blocks.py  embeddings.py  heads.py  ms_transformer.py
api/src/neurotrader/training/: metrics.py
api/src/neurotrader/utils/: __init__.py  io.py  logging.py  seed.py  time.py
api/tests/: test_api.py  test_datasets.py  test_labels.py  test_losses.py  test_runs.py  test_splitter.py
docs/: CSV_DATA_INTAKE.md  MANUAL_TESTING.md  QUICKSTART.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/data/: page.tsx
frontend/src/app/runs/[id]/: page.tsx
frontend/src/app/runs/new/: page.tsx
frontend/src/components/: DatasetChart.tsx  DatasetList.tsx  ValidationModal.tsx
scripts/: generate_example_data.py  test_dataset_api.py  validate_structure.py
src/neurotrader/: cli.py
src/neurotrader/features/: calendar.py  crossasset.py  microstructure.py  registry.py  technical.py
src/neurotrader/labels/: thresholds.py
src/neurotrader/losses/: factory.py
src/neurotrader/models/: ms_transformer.py
src/neurotrader/training/: __init__.py
src/neurotrader/utils/: io.py  logging.py  seed.py
tests/: test_splitter.py
