[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neurotrader"
version = "0.1.0"
description = "Multi-input, multi-horizon, probabilistic Transformer for financial time-series"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "neurotrader contributors"}
]
keywords = ["finance", "trading", "transformer", "deep-learning", "time-series"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "torchmetrics>=1.0.0",
    "hydra-core>=1.3.0",
    "pydantic>=2.0.0",
    "typer[all]>=0.9.0",
    "pandas>=2.0.0",
    "polars>=0.18.0",
    "ta>=0.11.0",
    "numpy>=1.24.0",
    "optuna>=3.0.0",
    "ray[tune]>=2.6.0",
    "deap>=1.4.0",
    "nevergrad>=0.12.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "vectorbt>=0.25.0",
    "mlflow>=2.5.0",
    "wandb>=0.15.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "omegaconf>=2.3.0",
    "ccxt>=4.0.0",
    "pyarrow>=12.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
    "pre-commit>=3.3.0",
]

[project.scripts]
neurotrader-train = "neurotrader.cli:train_command"
neurotrader-predict = "neurotrader.cli:predict_command"
neurotrader-tune = "neurotrader.cli:tune_command"
neurotrader-calibrate = "neurotrader.cli:calibrate_command"
neurotrader-backtest = "neurotrader.cli:backtest_command"
neurotrader-export-onnx = "neurotrader.cli:export_onnx_command"

[tool.hatch.build.targets.wheel]
packages = ["src/neurotrader"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/configs",
    "/tests",
    "/scripts",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=neurotrader --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
